Fix misaligned label

--- a/src/css/dyna-rules.css
+++ b/src/css/dyna-rules.css
@@ -59,6 +59,7 @@ body:not(.editing) #diff.dirty #commitButton:hover {
     }
 
 #ruleFilter {
+    align-items: center;
     direction: ltr;
     display: flex;
     justify-content: center;
